# fabien-discord-bot

./: Cargo.toml
src/: fabi_error.rs  illegal_message.rs  main.rs  normal_messages.rs  utils.rs
src/commands/: clear_chan.rs  doomlag.rs  give_me_back_my_role.rs  goulag.rs  mod.rs  nogoulag.rs  server_info.rs  spit_on.rs
