[package]
name = "goulagman"
version = "2.0.0"
authors = ["Morgan Van Amerongen <mistigri.van@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"

[dependencies.tokio]
version = "1.6"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
features = ["framework", "standard_framework", "rustls_backend"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
